cleanup gl-matrix operations

--- a/Lesson4/.project
+++ b/Lesson4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GWTGL3D</name>
+	<name>LWGLWGWTGL_L4</name>
 	<comment></comment>
 	<projects>
 	</projects>
